CHANGES.txt for "Vectoroids"

by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/vectoroids/

January 25, 2024

Version 1.1.2

2025.01.25 (1.1.2)
  * Ported from SDL1.2 to SDL2
    Based on work by "midzer" for his Emscripten build
    (https://github.com/midzer/vectoroids/blob/emscripten)

2025.01.25 (1.1.1)
  * Made non-embedded screen size 640x480.

  * Title screen improvements:

    + "Start" appears as "Start Over" if a game is active.

    + Highlight "Start [Over]" and "Continue" when pointer hovers over them.

    + [Up]/[Down] keys can be used to select items, too.

  * Game screen improvements:

    + Show "SCORE" and "LEVEL" next to the numbers at the top.

    + On-screen zone for controlling ship with touch/tap or mouse.

  * 3 bullets allowed on non-embedded (desktop/etc.) version, too.

  * Improved firing controls (avoid multiple bullets at once w/ joystick).

  * Cleaned up warnings; ran `indent` against source (see `indent.sh`)


2002.04.20 (1.1.0)
  * Lowered volume of game-over sound (it was ear-piercing on the Zaurus!)

  * Reduced length of shots in embedded version (screen is smaller...)

  * Reduced max. number of asteroids on screen at once for embedded version


2002.04.14 (1.0.9)
  * Fixed compile error for desktop version.  (Thanks Christian Steigies)

  * Tweaked embedded version
  
    - Made score and level smaller

    - Made ship's flame look better

    - Made zooming 'LEVEL' display brighter

    - Increased contrast and blur of background image
    
    - Reduced background image to 8bit, shrinking its file size

  * Update version number in docs and man page.


2002.04.13 (1.0.8)
  * Created 'embedded' target (for iPaq and Zaurus PDAs running Linux)


2002.01.03 (1.0.7)
  * Makefile update

    - Install target changes by Christian T. Steigies <cts@debian.org>


2002.01.02/2001.01.03 (1.0.6/1.0.6b)
  * Documentation update
  
    - Updated music author's (Mike Faltiss's) contact info. in README.txt

