@@ -13,6 +13,9 @@ Version 1.1.2
     Based on work by "midzer" for his Emscripten build
     (https://github.com/midzer/vectoroids/blob/emscripten)
 
+  * Game screen improvements:
+    + Draw ships and bullets later (on top of other screen elements)
+
 2025.01.25 (1.1.1)
   * Made non-embedded screen size 640x480.
 
